--- a/Legend of Thoron/Legend of Thoron.csproj
+++ b/Legend of Thoron/Legend of Thoron.csproj
@@ -4,6 +4,14 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Legend_of_Thoron</RootNamespace>
+    <StartupObject></StartupObject>
+    <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <Authors>Viktor Čierňava</Authors>
+    <Version>1.1.0</Version>
+    <Company>NOSCH Students</Company>
+    <Description>Jednoduchá RPG Hra</Description>
+    <PackageIcon></PackageIcon>
+    <PackageIconUrl />
   </PropertyGroup>
 
 </Project>
